force-app/main/default/objects/DX_Opportunity_Won_Event__e/DX_Opportunity_Won_Event__e.object-meta.xml
<CustomObject>
    <description>This event is published when an opportunity of type New Logo or New Market and Stage is Closed Won</description>
    <label>Opportunity Won Event</label>
    <pluralLabel>Opportunities Won Events</pluralLabel>
</CustomObject>