force-app/main/default/objects/DX_Opportunity_Won_Event__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity_Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>