force-app/main/default/objects/DX_Opportunity_Won_Event__e/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <label>Opportunity_Record_Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>