force-app/main/default/objects/DX_Opportunity_Won_Event__e/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <label>Opportunity_Status</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>